--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
         - ./theme:/var/www/html/wp-content/themes/custom-theme
         - ./plugins/advanced-custom-fields-pro:/var/www/html/wp-content/plugins/advanced-custom-fields-pro
+        - ./plugins/contact-form-7:/var/www/html/wp-content/plugins/contact-form-7
         - ./config/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
     depends_on:
       - db
